--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://ysk6092.github.io/my-artist-site/"
+baseURL = "https://ysk6092.github.io/staRbucks/"
 languageCode = "zh-tw"
 title = "Chang,Jui-Che"
 theme = "papermod"
